Fixing spacing and alignments

--- a/src/styles/BecomeHost.css
+++ b/src/styles/BecomeHost.css
@@ -1,18 +1,20 @@
 .become-host {
+  margin-top: 70px;
   position: relative;
   color: white;
   box-sizing: border-box;
+  align-items: center;
 }
 
 .become-host > img {
   margin-top: 100px;
   border-radius: 20px;
   height: 482px;
-  width: 1355px;
-  align-items: center;
+  width: 1359.2px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  align-items: center;
+  align-content: center;
+  margin: 0 70px 0 70px;
 }
 
 .content {
