--- a/src/styles/Discover.css
+++ b/src/styles/Discover.css
@@ -3,20 +3,20 @@
   margin-top: 70px;
 }
 
-.title {
-  padding-left: 90px;
+.discover-title {
+  padding-left: 70px;
   font-family: "Poppins", sans-serif;
   line-height: 10px;
 }
 
 .subTitle {
-  padding-left: 90px;
+  padding-left: 70px;
   font-family: "Poppins", sans-serif;
 }
 
 .discover-section {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 0 70px 0 70px;
 }
@@ -33,4 +33,8 @@
 
 .card-text {
   padding-left: 0 !important;
+}
+
+.discover-content {
+  padding-right: 40px !important;
 }
