--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-content: center;
   background-color: white;
   position: sticky;
   top: 0;
